--- a/package.json
+++ b/package.json
@@ -12,18 +12,22 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
-    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/elements": "^2.2.5",
     "@react-navigation/native": "^7.0.14",
     "@supabase/supabase-js": "^2.84.0",
     "expo": "~54.0.0",
+    "expo-camera": "~17.0.9",
     "expo-constants": "~18.0.10",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.10",
+    "expo-image-picker": "~17.0.8",
     "expo-linking": "~8.0.9",
     "expo-location": "~19.0.7",
+    "expo-quick-actions": "^6.0.0",
     "expo-router": "~6.0.15",
     "expo-splash-screen": "~31.0.11",
     "expo-status-bar": "~3.0.8",
@@ -31,6 +35,7 @@
     "expo-system-ui": "~6.0.8",
     "expo-web-browser": "~15.0.9",
     "firebase": "^12.6.0",
+    "geolib": "^3.3.4",
     "lucide-react-native": "^0.469.0",
     "nativewind": "^2.0.11",
     "react": "19.1.0",
@@ -47,6 +52,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@expo/ngrok": "^4.1.3",
     "@types/react": "~19.0.0",
     "eslint": "^8.57.0",
     "eslint-config-expo": "~8.0.1",
