Sync: Force push all latest local code to GitHub

--- a/app.json
+++ b/app.json
@@ -25,6 +25,9 @@
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
+    "experiments": {
+      "baseUrl": "/ResQNet"
+    },
     "plugins": [
       "expo-router",
       [
@@ -39,10 +42,6 @@
           }
         }
       ]
-    ],
-    "experiments": {
-      "typedRoutes": true,
-      "reactCompiler": true
-    }
+    ]
   }
 }
